// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'interlay' to 'acala' using bridgeSDK cross-chain 'INTR' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": "(rounded 100000)",
  "toChain": "(rounded 1.99)",
}
`;

exports[`'interlay' to 'acala' using bridgeSDK cross-chain 'INTR' > fee 1`] = `"(rounded 0.006)"`;

exports[`'interlay' to 'acala' using bridgeSDK cross-chain 'INTR' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 100000,
  "toChain": 0,
}
`;
